# urobor

./: README.md  pyproject.toml
examples/: variables.md
tests/: conftest.py  test_interpolated_string.py  test_test_case.py
tests/commands/: test_set_command.py
tests/fixtures/: examples_dir.py
tests/markdown/: test_parser.py
urobor/: test_case.py
urobor/commands/: __init__.py  catalog.py  command.py  http_command.py  print_command.py  set_command.py
urobor/interpolation/: functions.py  interpolated_string.py  modifiers.py
urobor/markdown/: __init__.py  parser.py  token.py
